@@ -1,5 +1,6 @@
 * v2.5.7.1
   * fixed copyright note in the License file
+  * improved problem reporting in module:program
 
 * v2.5.7
   * added 'ck_html_end_note' key to customize CK result dashboard
